// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render failed state of recovery codes dialog 1`] = `
.c6 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-all;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c6 a {
  color: #FFFFFF;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 8px;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #2C3A73;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: rgba(255,255,255,0.87);
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c7 {
  box-sizing: border-box;
  margin-top: 16px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="sc-AxirZ sc-fzqBZW c4"
      >
        <div
          class="c5"
          color="text.primary"
        >
          An error has occurred
        </div>
      </div>
      <div
        class="c6"
        kind="danger"
      >
        failed to generate recovery codes
      </div>
      <div
        class="sc-AxirZ c7"
      >
        <button
          class="c8"
          kind="primary"
        >
          Try again
        </button>
        <button
          class="c9"
          kind="secondary"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render successful first timer recovery codes dialog 1`] = `
.c8 {
  box-sizing: border-box;
  margin-bottom: 32px;
}

.c12 {
  box-sizing: border-box;
}

.c22 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #651FFF;
}

.c19:active {
  background: #354AA4;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 40px;
  width: 100%;
}

.c20:active {
  opacity: 0.56;
}

.c20:hover,
.c20:focus {
  background: #651FFF;
}

.c20:active {
  background: #354AA4;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c6 {
  box-sizing: border-box;
  max-width: 1024px;
  min-width: 584px;
  margin-left: auto;
  margin-right: auto;
  background-color: #222C59;
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
  color: #FFFFFF;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 4px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: 600;
  margin: 0px;
  margin-bottom: 8px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 16px;
  margin: 0px;
  margin-top: 8px;
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 8px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
}

.c5 {
  box-sizing: border-box;
  max-width: 1024px;
  min-width: 584px;
  margin-left: auto;
  margin-right: auto;
  background-color: #222C59;
  border-radius: 8px;
  overflow: hidden;
  display: flex;
  flex-wrap: wrap;
}

.c7 {
  box-sizing: border-box;
  min-width: 584px;
  padding: 32px;
  background-color: #222C59;
  flex: 4;
  display: flex;
  flex-direction: column;
}

.c14 {
  box-sizing: border-box;
  padding: 8px;
  padding-bottom: 24px;
  padding-left: 16px;
  background-color: #111B48;
  border-radius: 8px;
  display: flex;
  justify-content: space-between;
}

.c16 {
  box-sizing: border-box;
  margin-left: 8px;
  display: flex;
  flex-direction: column;
}

.c21 {
  box-sizing: border-box;
  min-width: 384px;
  padding: 32px;
  background-color: #1C254D;
  flex: 2;
  display: flex;
  flex-direction: column;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  padding: 0px;
  background: none;
}

.c4 {
  box-sizing: border-box;
}

.c18 {
  max-width: 48px;
  width: 100%;
  padding: 4px 8px;
  min-height: 10px;
  font-size: 10px;
}

@media print {
  .c4 {
    overflow: hidden;
  }

  .c4 .print {
    visibility: visible;
  }

  .c4 .no-print {
    visibility: hidden;
  }
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5 sc-AxirZ c6 no-print"
          overflow="hidden"
        >
          <div
            class="c7 print"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
                color="light"
              >
                Backup & Recovery Codes
              </div>
              <div
                class="c10"
              >
                Please save these account recovery codes in a safe offline place.
              </div>
              <div
                class="c11"
              >
                You can use each code once if you lose your second factor authenticator or password.
              </div>
            </div>
            <div
              class="c12"
            >
              <div
                class="c13"
              >
                Recovery Codes (
                3
                 Total)
              </div>
              <div
                class="c14"
              >
                <div
                  class="c15"
                  font-size="3"
                  style="white-space: pre-wrap;"
                >
                  tele-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword
                </div>
                <div
                  class="c16 no-print"
                >
                  <button
                    class="c17 c18"
                    kind="primary"
                  >
                    COPY
                  </button>
                  <button
                    class="c19 c18"
                    kind="primary"
                  >
                    PRINT
                  </button>
                </div>
              </div>
              <button
                class="c20 no-print"
                kind="primary"
                width="100%"
              >
                I have saved my Recovery Codes - Close dialog
              </button>
            </div>
          </div>
          <div
            class="c21"
          >
            <div
              class="c22"
            >
              <div
                class="c23"
              >
                Why do I need these codes?
              </div>
              <div
                class="c24"
                color="text.secondary"
              >
                Use them in the event of losing your password or two-factor device.
              </div>
            </div>
            <div
              class="c22"
            >
              <div
                class="c23"
              >
                How long do the codes last for?
              </div>
              <div
                class="c24"
                color="text.secondary"
              >
                Recovery codes can only be used once. After recovering your account, we will generate a new set of codes for you.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render successful recovery codes dialog 1`] = `
.c8 {
  box-sizing: border-box;
  margin-bottom: 32px;
}

.c12 {
  box-sizing: border-box;
}

.c22 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #651FFF;
}

.c19:active {
  background: #354AA4;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 40px;
  width: 100%;
}

.c20:active {
  opacity: 0.56;
}

.c20:hover,
.c20:focus {
  background: #651FFF;
}

.c20:active {
  background: #354AA4;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c6 {
  box-sizing: border-box;
  max-width: 1024px;
  min-width: 584px;
  margin-left: auto;
  margin-right: auto;
  background-color: #222C59;
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
  color: #FFFFFF;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 4px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: 600;
  margin: 0px;
  margin-bottom: 8px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 16px;
  margin: 0px;
  margin-top: 8px;
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 8px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
}

.c5 {
  box-sizing: border-box;
  max-width: 1024px;
  min-width: 584px;
  margin-left: auto;
  margin-right: auto;
  background-color: #222C59;
  border-radius: 8px;
  overflow: hidden;
  display: flex;
  flex-wrap: wrap;
}

.c7 {
  box-sizing: border-box;
  min-width: 584px;
  padding: 32px;
  background-color: #222C59;
  flex: 4;
  display: flex;
  flex-direction: column;
}

.c14 {
  box-sizing: border-box;
  padding: 8px;
  padding-bottom: 24px;
  padding-left: 16px;
  background-color: #111B48;
  border-radius: 8px;
  display: flex;
  justify-content: space-between;
}

.c16 {
  box-sizing: border-box;
  margin-left: 8px;
  display: flex;
  flex-direction: column;
}

.c21 {
  box-sizing: border-box;
  min-width: 384px;
  padding: 32px;
  background-color: #1C254D;
  flex: 2;
  display: flex;
  flex-direction: column;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  padding: 0px;
  background: none;
}

.c4 {
  box-sizing: border-box;
}

.c18 {
  max-width: 48px;
  width: 100%;
  padding: 4px 8px;
  min-height: 10px;
  font-size: 10px;
}

@media print {
  .c4 {
    overflow: hidden;
  }

  .c4 .print {
    visibility: visible;
  }

  .c4 .no-print {
    visibility: hidden;
  }
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5 sc-AxirZ c6 no-print"
          overflow="hidden"
        >
          <div
            class="c7 print"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
                color="light"
              >
                New Backup & Recovery Codes
              </div>
              <div
                class="c10"
              >
                Please save these account recovery codes in a safe offline place.
              </div>
              <div
                class="c11"
              >
                You can use each code once if you lose your second factor authenticator or password.
              </div>
            </div>
            <div
              class="c12"
            >
              <div
                class="c13"
              >
                Recovery Codes (
                3
                 Total)
              </div>
              <div
                class="c14"
              >
                <div
                  class="c15"
                  font-size="3"
                  style="white-space: pre-wrap;"
                >
                  tele-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword
                </div>
                <div
                  class="c16 no-print"
                >
                  <button
                    class="c17 c18"
                    kind="primary"
                  >
                    COPY
                  </button>
                  <button
                    class="c19 c18"
                    kind="primary"
                  >
                    PRINT
                  </button>
                </div>
              </div>
              <button
                class="c20 no-print"
                kind="primary"
                width="100%"
              >
                I have saved my new Recovery Codes - Close dialog
              </button>
            </div>
          </div>
          <div
            class="c21"
          >
            <div
              class="c22"
            >
              <div
                class="c23"
              >
                Why do I need these codes?
              </div>
              <div
                class="c24"
                color="text.secondary"
              >
                Use them in the event of losing your password or two-factor device.
              </div>
            </div>
            <div
              class="c22"
            >
              <div
                class="c23"
              >
                How long do the codes last for?
              </div>
              <div
                class="c24"
                color="text.secondary"
              >
                Recovery codes can only be used once. After recovering your account, we will generate a new set of codes for you.
              </div>
            </div>
            <div
              class="c12"
            >
              <div
                class="c23"
              >
                What about my old codes?
              </div>
              <div
                class="c24"
                color="text.secondary"
              >
                Your old recovery codes are no longer valid, please replace them with these new ones.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
